# sync-dot-files

./: Cargo.toml
.github/workflows/: release.yml  release_on_tag.yml
src/: app.rs  config.rs  main.rs  sh.rs
